k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
  labels:
    app: workshop-service
spec:
  type: ClusterIP
  selector:
    app: workshop-service
  ports:
    - port: 80
      targetPort: 8083
      protocol: TCP
      name: http
